[gd_scene load_steps=7 format=3 uid="uid://pp36vlm27ngf"]

[ext_resource type="Script" uid="uid://brgepb7po0bad" path="res://Scripts/game_over.gd" id="1_ojehl"]
[ext_resource type="FontFile" uid="uid://ckhm8rf0gkall" path="res://Fonts/PressStart2P.ttf" id="2_8fo1c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ek8ke"]
bg_color = Color(0.32941177, 0.30588236, 0.40784314, 1)
skew = Vector2(0.335, 0)
border_color = Color(0.5529412, 0.4117647, 0.47843137, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eoghk"]
bg_color = Color(0.1254902, 0.23529412, 0.3372549, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.050980393, 0.16862746, 0.27058825, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_14u15"]
content_margin_left = 10.0
content_margin_right = 10.0

[sub_resource type="Theme" id="Theme_j3ryr"]
default_font = ExtResource("2_8fo1c")
Button/constants/line_spacing = 9
Label/font_sizes/font_size = 24
Label/styles/normal = SubResource("StyleBoxFlat_ek8ke")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_eoghk")
RichTextLabel/font_sizes/normal_font_size = 40
RichTextLabel/styles/normal = SubResource("StyleBoxEmpty_14u15")

[node name="GameOver" type="CanvasLayer" node_paths=PackedStringArray("run_duration_timer", "run_duration_text", "cause_text") groups=["GameOver"]]
process_mode = 3
script = ExtResource("1_ojehl")
run_duration_timer = NodePath("RunDuration")
run_duration_text = NodePath("Interface/PanelContainer/VBoxContainer/RunDurationText")
cause_text = NodePath("Interface/PanelContainer/VBoxContainer/Cause")

[node name="Interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Interface"]
custom_minimum_size = Vector2(800, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_j3ryr")

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleText" type="RichTextLabel" parent="Interface/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
bbcode_enabled = true
text = "[wave]FIN DE LA PARTIDA[/wave]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RunDurationText" type="Label" parent="Interface/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Tiempo de la partida: 55:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cause" type="Label" parent="Interface/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Causa: Token ya usado"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart" type="Button" parent="Interface/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Volver a jugar"

[node name="Quit" type="Button" parent="Interface/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Salir del juego"

[node name="RunDuration" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Interface/PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Interface/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="RunDuration" to="." method="_on_run_duration_timeout"]
